Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 3.0, Impala 2.12.0
-
None
-
ghx-label-7
Description
When events_ is empty in runtime-profile-counters.h:347, events_.back() is undefined. This can lead to a crash. The fix is to check for events_.empty() before calling back().
Attachments
Issue Links
- is broken by
-
IMPALA-6190 Add a debug webpage to show fragment instances of a query
- Resolved
-
IMPALA-6246 Add timeline information to fragment instances in profile
- Resolved